# SHROUD

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  conftest.py  index.html  package-lock.json  package.json  pyproject.toml
assets/model/: README.md
contracts/: ShroudRegistry.sol
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BootSequence.tsx  ChainEvents.tsx  CoverageMap.tsx  Dashboard.tsx  DefectPanel.tsx  Header.tsx  ShroudConsole.tsx  StatsBar.tsx  ThreeScene.tsx  UAVFleet.tsx
frontend/src/data/: mockSimulation.ts
frontend/src/hooks/: useSimulation.ts
frontend/src/lib/: crypto.ts
frontend/src/types/: index.ts
scripts/: deploy.py  fund_check.py  gen_key.py  make_demo_video.py  make_flight_video.py  make_video.py
src/: App.tsx  index.css
src/components/: EventCard.tsx  InteractiveMap.tsx  Navbar.tsx  SiteCard.tsx
src/data/: communityEvents.ts  historicalSites.ts
src/pages/: Discover.tsx  Events.tsx  Home.tsx  MapView.tsx
src/shroud/: __init__.py  cli.py  pipeline.py
src/shroud/chain/: __init__.py  client.py  compile.py  eip712.py  identities.py
src/shroud/coord/: __init__.py  allocation.py  graph.py
src/shroud/core/: bus.py  messages.py  node.py  rng.py
src/shroud/fleet/: __init__.py
src/shroud/perception/: __init__.py  cv_detect.py  sar_detect.py
src/types/: index.ts
storms-of-drones/: package-lock.json  package.json
storms-of-drones/app/: globals.css  layout.tsx  page.tsx
storms-of-drones/components/: AnalyticsSection.tsx  FleetSection.tsx  Globe.tsx  HeroSection.tsx  ItalyMapSection.tsx
tests/: test_contract.py  test_coord.py  test_e2e.py  test_render_cv.py  test_sar.py  test_sim_core.py
(+19 files in other folders)
